[Fix] 토큰 헤더 수정 / [Feat(category, friend)] 토큰 인증 절차 추가